able to get missing getter/setter